# inferflux

./: .codecov.yml  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUDA_12_SETUP.md  GEMINI.md  LICENSE  README.md  SECURITY.md  build_cuda_ninja.bat  build_cuda_ninja.ps1  build_cuda_temp.bat  build_cuda_temp.ps1  build_cuda_workaround.bat  build_with_cuda.bat  build_with_cuda_12.bat  mlx_in_cpp.html  set_cuda_path.ps1  windows_ncu_session_prompt.md
.githooks/: commit-msg  pre-commit
.github/workflows/: build.yml  ci.yml  release.yml
accuracy_test/ollama/: req_0.json  req_1.json  req_2.json  req_3.json  req_4.json  req_5.json  req_6.json  req_7.json
charts/inferflux/: Chart.yaml  values.yaml
cli/: main.cpp
cmake/: Dependencies.cmake
config/: MODEL_VERIFICATION_REPORT.md  README.md  registry.yaml  server.cuda.benchmark.yaml  server.cuda.gguf.yaml  server.cuda.native.yaml  server.cuda.qwen14b.native.yaml  server.cuda.qwen14b.yaml  server.cuda.qwen32b.yaml  server.cuda.safetensors.yaml  server.cuda.yaml  server.rocm.qwen14b.yaml  server.rocm.yaml  server.template.yaml  server.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/grafana/: dashboard.json
deploy/helm/: decode-values.yaml  prefill-values.yaml
deploy/prometheus/: alerts.yml  prometheus.yml
docker/: Dockerfile  Dockerfile.cpu  docker-compose.yaml
docs/: API_SURFACE.md  ARCHITECTURE_COMPARISON.md  ARCHIVE_INDEX.md  ASYNC_OVERLAP_BENCHMARK_RESULTS.md  ASYNC_OVERLAP_IMPLEMENTATION.md  AdminGuide.md  Architecture.md  BACKEND_DEVELOPMENT.md  BACKEND_REFACTORING_COMPLETE.md  BACKEND_RENAME_UNIVERSAL_TO_LLAMACPP.md  BACKEND_RENAME_VERIFICATION.md  BATCH_ACCUMULATION_IMPLEMENTATION.md  BATCH_ACCUMULATION_TEST_RESULTS.md  BATCH_SIZE_CONFIG_INVESTIGATION.md  BENCHMARK_NATIVE_VS_LLAMACPP.md  COMPETITIVE_POSITIONING.md  CONCURRENT_THROUGHPUT_ANALYSIS.md  CONCURRENT_THROUGHPUT_BENCHMARK_16WORKERS.md  CONCURRENT_THROUGHPUT_INVESTIGATION.md  CONCURRENT_THROUGHPUT_SUMMARY.md  CONFIG_REFERENCE.md  CUDA_STREAMING_BENCHMARK.md  DOCS_STYLE_GUIDE.md  DYNAMIC_SLOT_ALLOCATION_STARTUP_ADVISOR.md  DeveloperGuide.md  Diagrams.md  FFN_FUSION_ANALYSIS.md  FFN_FUSION_BLOCKED.md  FFN_FUSION_STATUS.md  FLASHATTENTION_IMPLEMENTATION_GUIDE.md  FLASHATTENTION_LIVE_TEST_RESULTS.md  FLASHATTENTION_METRICS_IMPLEMENTATION.md  FLASHATTENTION_QUICKSTART.md  FLASHATTENTION_VERIFICATION.md  FP16_BENCHMARK_RESULTS_FINAL.md  FP16_CONCURRENT_BENCHMARK_FINAL.md  FP16_DEPLOYMENT_TEST_RESULTS.md  FP16_MODEL_GUIDE.md  FP16_OOM_FIX_FINAL_SUMMARY.md  FP16_OOM_FIX_VALIDATION.md  (+80 more)
docs/design/: Backend_Parity_LlamaCpp_CUDA_MLX.md  FUSED_KERNEL_REDESIGN_SPEC.md  KV_CACHE_ARCHITECTURE_DEEP_DIVE_2026_03_04.md  LIGHTWEIGHT_UI.md  NATIVE_CUDA_SGLANG_INSPIRED_EXECUTION_PLAN.md  NATIVE_GGUF_QUANTIZED_RUNTIME_ARCHITECTURE.md  REFACTORING_COMMON_BACKEND_LOGIC.md  SEQUENCE_SLOT_MANAGER_PLAN.md  SESSION_HANDLE_LAYER_PHASE1.md  backend_naming_strategy.md  memory_accounting_strategy.md  mlx_backend.md  native_kv_device_addressing.md  ui_launcher.md
docs/issues/: P0-1-native-cuda-identity-contract.md  P0-2-strict-native-request-policy.md  P0-3-gpu-continuous-batching-v1.md  P0-4-gpu-kv-page-allocator-prefix-reuse.md  P0-5-mandatory-gpu-behavioral-ci-gate.md  P1-1-native-flashattention-production-path.md  P1-2-quantized-native-forward-productionization.md  P1-3-scheduler-lock-partitioning.md  P1-4-resource-economy-metrics-autoscaling-signals.md  P1-5-module-level-coverage-gates.md  P1-6-distributed-failure-path-contract-tests.md  README.md
installers/deb/: README.md
installers/homebrew/: inferflux.rb
installers/macos/: README.md
installers/rpm/: README.md
installers/windows/: README.md
installers/winget/: inferencial.inferflux.yaml
io/: async_file_writer.cpp  async_file_writer.h
memory/: optimization-pipeline.md  optimization-progress-2026-03-10.md  session-2026-03-10-ffn-fusion-start.md  session-2026-03-10-vectorized-final.md
model/: gguf_tokenizer.cpp  gguf_tokenizer.h  hf_tokenizer.cpp  hf_tokenizer.h  llama_tokenizer.cpp  llama_tokenizer.h  model_format.cpp  model_format.h  tokenizer.h  tokenizer_factory.cpp  tokenizer_factory.h
model/gguf/: gguf_loader.cpp  gguf_loader.h
model/tokenizer/: simple_tokenizer.cpp  simple_tokenizer.h
net/: http_client.cpp  http_client.h
policy/: opa_client.cpp  opa_client.h  policy_backend.h  policy_store.cpp  policy_store.h
runtime/: device_context.h  logprob.h  result.h  string_utils.h
scheduler/: batch_selection_policy.cpp  batch_selection_policy.h  fairness_controller.cpp  fairness_controller.h  model_registry.cpp  model_registry.h  model_router.h  model_selection.cpp  model_selection.h  request_batch.h  request_debug.h  request_requeue.h  scheduler.cpp  scheduler.h  session_handle_manager.cpp  session_handle_manager.h  single_model_router.cpp  single_model_router.h
scripts/: README.md  advisor_test_corrected.sh  advisor_test_final.sh  analyze_backend_isolation.py  analyze_circular_deps.py  analyze_ncu.py  analyze_nsys_results.py  bench_ab.py  benchmark.sh  benchmark_backend_comparison.py  benchmark_batch_accumulation.py  benchmark_cuda_backends.sh  benchmark_formats.sh  benchmark_fp16_final.sh  benchmark_multi_backend_comparison.sh  benchmark_phase_overlap.py  benchmark_phase_overlap_simple.sh  benchmark_request_driver.py  benchmark_simple.sh  build.sh  build_and_test_batch_kernel.sh  build_and_test_vectorized_gemv.sh  build_flash_attention_test.sh  check_backend_identity.py  check_docs_contract.py  classify_benchmark_response.py  compare_decode_traces.py  diag_q8_only.bat  diag_server.bat  extract_native_dispatch_winners.py  final_model_test.sh  generate_sbom.py  install-hooks.sh  launch_llamacpp.bat  minimal_launch.bat  ncu_export_admin.bat  ncu_probe.bat  ncu_probe_admin.bat  ncu_profile.bat  nsys_probe.bat  (+45 more)
server/: cpu_quantization_detector.cpp  cpu_quantization_detector.h  main.cpp  quantization_detection.h  startup_advisor.cpp  startup_advisor.h
server/tracing/: span.h
webui/: ui_bundle.cpp  ui_bundle.h  ui_renderer.cpp  ui_renderer.h
(+412 files in other folders)
